@@ -3,7 +3,7 @@
     "type": "roundcube-plugin",
     "description": "PGP Encryption for Roundcube",
     "license": "GPLv3+",
-    "version": "0.3",
+    "version": "0.4",
     "authors": [
         {
             "name": "Aleksander Machniak",
